
-Changed config setting 'asset_price_alerts_freq' time units to hours (instead of minutes)

IMPORTANT NOTES: 

v4.06.0 and higher modularizes the configuration settings into the new $app_config array. ALL
CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

v4.04.3 and higher of this app RESETS PRICE ALERT VOLUME STORED TO USE PAIRING VOLUME INSTEAD 
OF ASSET VOLUME, SO !FIRST! PRICE ALERTS AFTER UPGRADING WILL HAVE INCORRECT VOLUME CHANGE 
PERCENTAGES (BUT WILL BE ACCURATE AFTERWARDS).

v4.03.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.

-------------------------------------------------------------------



-------------------------------------------------------------------
4.07.2:

-Code cleanup

-Bug fixes for auto-install script

-Mandatory secure HTTPS (SSL) connection for the web interface

-Htaccess password protection config settings (enable / disable username and password required to view web interface)

IMPORTANT NOTES: 

v4.06.0 and higher modularizes the configuration settings into the new $app_config array. ALL
CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

v4.04.3 and higher of this app RESETS PRICE ALERT VOLUME STORED TO USE PAIRING VOLUME INSTEAD 
OF ASSET VOLUME, SO !FIRST! PRICE ALERTS AFTER UPGRADING WILL HAVE INCORRECT VOLUME CHANGE 
PERCENTAGES (BUT WILL BE ACCURATE AFTERWARDS).

v4.03.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.

-------------------------------------------------------------------













