@@ -1,4 +1,7 @@
 <?php
+/*
+ * Copyright 2014-2020 GPLv3, DFD Cryptocoin Values by Mike Kilday: http://DragonFrugal.com
+ */
 
 
 //////////////////////////////////////////////////////////////////
